# skillforge

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
skillforge/: __init__.py  cli.py
skillforge/core/: __init__.py  course_generator.py  session.py  simulator.py  validator.py
skillforge/models/: __init__.py  config.py  course.py  enums.py  lesson.py  progress.py  session.py
skillforge/utils/: __init__.py  llm_client.py  output.py  serialization.py
tests/: __init__.py  test_cli.py  test_cli_interactive.py  test_course_generator.py  test_llm_client.py  test_models.py  test_output.py  test_package.py  test_serialization.py  test_session_manager.py  test_simulator.py  test_validator.py
